Version 1.8.0rc1
    - Date 2022-01-31
    - Adapted linux and windows 64 bit builds to pylon 6.3.0 (which includes
      the removal of BCON support).

Version 1.7.4
    - Date 2021-10-19
    - setup.py: Some python2 relics have been removed and distutils is no
      longer used because distutils is deprecated in python 3.10.
    - setup.py: Include vcruntime140_1.dll into the package for current MVSC
      compiler.
    - Fixed double enumeration bug on linux
    - Updated to pylon 6.2 on windows and linux and adapted some tests for it.
    - Dropped linux x86 (32bit) support as it is no longer supported by pylon

Version 1.7.3
    - Internal Basler release

Version 1.7.2
    - Date 2021-03-03
    - Fixed runtime error in binary windows releases with python 3.5 - 3.8

Version 1.7.1
    - Date 2021-02-22
    - Added missing pypi deployments for python 3.9 on windows

Version 1.7.0
    - Date 2021-02-19
    - Adapted to python 3.9.
    - Added a way to force a certain GenTL search path (used for frame grabber
      development).
    - Avoided the dependency on vcruntime140_1.dll when building with Visual
      Studio 2019.
    - Added macOS CI builds.
    - Migrated from travis to gh-actions for linux and macOS.
    - Added pypi deployments for linux and macOS
    - Expanded samples/gige_ip_config.py to include demonstrations of
      BroadcastIpConfiguration

Version 1.6.0
    - Date 2020-08-20
    - Fixed issues with callbacks due to intptr_t truncation on linux
    - Fixed unittests that failed in python 3.8
    - Updated to current pylon version for windows and linux
    - Enabled unittests in CI-builds
    - Fixed aarch64 binary wheel releases on github

Version 1.5.4
    - Date 2020-04-16
    - Fix interaction with ipython jedi autocompleter
    - Dropped python 3.3 binary releases
    - Added python 3.8 binary releases
    - Use swig 4.0 for linux binary releases

Version 1.5.3
    - Date 2020-03-23
    - Use pylon 6.1.0.19674 to build for Windows